osd/PG: write pg epoch when resurrecting pg after delete vs merge race

Fixes: http://tracker.ceph.com/issues/35923
Signed-off-by: Sage Weil <sage@redhat.com>